# qqr

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg
qqr/: __init__.py  qqr.py  tui.py
qqr/core/: core.py
qqr/core/utils/: checkers.py  options.py
qqr/res/: markdown.py  tui.tcss
