[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qqr"
version = "1.0.0"
description = "Terminal-based QR code generator with CLI and TUI interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "0spol", email = "gaparicio368@gmail.com"}
]
keywords = ["qr", "cli", "tui", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "segno>=1.6.6",
    "rich>=14.1.0",
    "typer>=0.17.4",
    "textual>=6.1.0",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "linkify-it-py>=2.0.3",
    "Pygments>=2.19.2",
    "uc-micro-py>=1.0.3"
]

[project.scripts]
qqr = "qqr.qqr:main"
tui = "qqr.tui:main"
