[metadata]
name = qqr
version = 1.0.0
description = Terminal-based QR code generator with CLI and TUI interfaces
long_description = file: README.md
long_description_content_type = text/markdown
author = 0spol
author_email = gaparicio368@gmail.com
license = Apache-2.0
keywords = qr, cli, tui, terminal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    segno>=1.6.6
    rich>=14.1.0
    typer>=0.17.4
    textual>=6.1.0
    markdown-it-py>=4.0.0
    mdit-py-plugins>=0.5.0
    mdurl>=0.1.2
    linkify-it-py>=2.0.3
    Pygments>=2.19.2
    uc-micro-py>=1.0.3

[options.packages.find]
exclude =
    tests*
    .venv*

[options.entry_points]
console_scripts =
    qqr = qqr.qqr:main
    tui = qqr.tui:main

[options.extras_require]
dev =
    black
    flake8
    pytest
